kubernetes/apps/business/authentik/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: authentik
  labels:
    environment: business
    managed-by: flux
    pod-security.kubernetes.io/enforce: restricted
